js/src/tests/test262/built-ins/Error/isError/fake-errors.js
var
fakeError
=
{
__proto__
:
Error
.
prototype
constructor
:
Error
message
:
'
'
stack
:
new
Error
(
)
.
stack
}
;
if
(
typeof
Symbol
=
=
=
'
function
'
&
&
typeof
Symbol
.
toStringTag
=
=
=
'
symbol
'
)
{
fakeError
[
Symbol
.
toStringTag
]
=
'
Error
'
;
}
assert
.
sameValue
(
Error
.
isError
(
fakeError
)
false
)
;
reportCompare
(
0
0
)
;
